@@ -122,4 +122,9 @@ shift - optional number of spaces to shift text right."
     (if (plusp diff)
 	(str+ (scopies diff c) str)
       str)))
-	
+
+(defun string-pad-right (str width &optional (c #\space))
+  (let ((diff (- width (length str))))
+    (if (plusp diff)
+	(str+ str (scopies diff c))
+      str)))
